--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clean": "rimraf dist",
     "test": "jest -c ./config/test/jest.js --verbose",
     "test:watch": "npm run test -- --watchAll -i --no-cache",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist -r dist"
   },
   "author": "Lemoncode",
   "license": "MIT",
